Add a profile to deny unsafe on JDK 23+